# BlueCrabOS

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
dev/: Cargo.toml
dev/.cargo/: config.toml
dev/src/: main.rs  serial.rs  vga_buffer.rs
doc/: barebones.md  meeting-notes.md  rust.md
doc/Interrupts/: cpu-exceptions.md  double-faults.md
doc/barebones-notes/: freestanding-binary.md  minimal-kernel.md  testing.md  vga-buffer.md
kernel/: Cargo.toml
kernel/src/: lib.rs  main.rs  vga_buffer.rs
src/: gdt.rs  interrupts.rs  lib.rs  main.rs  vga_buffer.rs
tests/: basic_boot.rs  lock_test.rs  should_panic.rs  stack_overflow.rs
