[package]
name = "blue_crab_os"
version = "0.1.0"
authors = ["John Hair stevewozniak@apple.com"]
edition = "2021"

# the profile used for `cargo build`
[profile.dev]
# panic = "abort" # disable stack unwinding on panic

# the profile used for `cargo build --release`
[profile.release]
# panic = "abort" # disable stack unwinding on panic

[dependencies]
bootloader = "0.9.23"
volatile = "0.2.6"
spin = "0.9.8"
spinning_top = "0.2.5"
x86_64 = "0.14.2"
uart_16550 = "0.2.0"
lock_api = "0.4.10"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[package.metadata.bootimage]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio",
    "-display", "none"
]
test-success-exit-code = 33         # (0x10 << 1) | 1
test-timeout = 300          # (in seconds)

[[test]]
name = "should_panic"
harness = false
