[package]
name = "bc_os"
version = "0.1.0"
authors = ["Nick Battista bigboi@dillydinkers.com"]
edition = "2021"

[dependencies]
bootloader = "0.9.23"
volatile = "0.2.6" #possibly change this once we make it our own!
spin = "0.5.2"
x86_64 = "0.14.2"
uart_16550 = "0.2.0"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[package.metadata.bootimage]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04"]
test-success-exit-code = 33