[package]
name = "blue_crab_os"
version = "0.1.0"
authors = ["John Hair stevewozniak@apple.com"]

# the profile used for `cargo build`
[profile.dev]
panic = "abort" # disable stack unwinding on panic

# the profile used for `cargo build --release`
[profile.release]
panic = "abort" # disable stack unwinding on panic

[dependencies]
bootloader = "0.9.23"